plugins {
    id 'java'
    id 'idea'
    id 'application'
    id 'java-library'
    id 'com.zyxist.chainsaw' version '0.3.1'
}

group 'info.tylerbauer.rpislideshow'
version '1.0-SNAPSHOT'

task runApp(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath

    main = 'info.tylerbauer.rpislideshow.Main'
}

task copyLibs(type: Copy) {
    into "build/libs"
    from configurations.runtime

    duplicatesStrategy = duplicatesStrategy.EXCLUDE

    exclude "javax.inject-1.jar"
}

// Set Target Versions

sourceCompatibility = 1.9
targetCompatibility = 1.9

// Define Project directories

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

jar {
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'

    manifest {
        attributes 'Main-Class': 'info.tylerbauer.rpislideshow.Main'
    }
}
jar.dependsOn(copyLibs)

// Dependencies Below

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
    compile 'com.google.api-client:google-api-client:1.23.0'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
    compile 'org.glassfish.jersey.core:jersey-client:2.27'
    compile 'org.glassfish.jersey.inject:jersey-hk2:2.27'
    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
    // https://mvnrepository.com/artifact/javax.activation/activation
    compile 'javax.activation:activation:1.1'
    // https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j
    compile 'javax.xml.bind:jaxb-api:2.3.0'

//    patch 'javax.annotations.api:jsr305:3.0.0'
    patch 'com.google.code.findbugs:jsr305:3.0.0'
//    compile 'javax.annotation:jsr250-api:1.0'

}

javaModule.hacks {
    patches('com.google.code.findbugs:jsr305', 'javax.annotation:jsr250-api')
}

// java --module-path build/libs -m info.tylerbauer.rpislideshow/info.tylerbauer.rpislideshow.Main
// java -jar build/libs/rpislideshow-1.0-SNAPSHOT.jar
// jlink --module-path "build/out;/opt/oracle-jdk-10.0.1/jmods" --add-modules info.tylerbauer.rpislideshow --output build/standalone